# Core-Tech-Engine-

./: .gitignore  ANIMATION_README.md  AUTHORS.txt  CMakeLists.append.txt  CMakeLists.txt  LICENSE.txt  README.md  README_AUTOGEN_CODEBLOCKS.md  README_AUTOSOLVE.md  README_CODEBLOCKS_VSCODE.md  README_CONTRIBUTING_SETUP.md  README_ECS_ADDED.md  README_ENGINE.md  README_FEATURES_ADDED.md  README_FEATURES_FINAL.md  README_LOD.md  README_NATIVE_CODEBLOCKS.md  README_OPTIMIZATIONS.md  README_OPTIMIZATIONS_IMPL.md  README_PBR_IBL.md  README_PHYSICS.md  README_PREBUILT_ENET_LUA.md  README_PRODUCTION_UPGRADES.md  README_PROTOTYPE_ADDITIONS.md  README_RENDERER_UPGRADE.md  README_SKINNING.md  autogen_integration_trace.json  build_deps.sh  build_fix_log.json  build_fix_log2.json  build_fix_log3.json  build_fix_log4.json  build_fix_log5.json  build_fix_log6.json  build_fix_log7.json  build_fix_log8.json  build_fix_log9.json  build_log.json  quick_tests_manual
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  ci.yml
CoreTech_Engine/CoreTech_Engine_With_Projects/: BUILD.md  CMakePresets.json  README_BUILD.txt  README_DEPENDENCIES.md  README_OGG_SUPPORT.md
CoreTech_Engine/CoreTech_Engine_With_Projects/src/audio_openal/: CMakeLists.txt
CoreTech_Engine_With_Projects/: CMakeLists_bullet.txt  CoreTech_Engine.sln  CoreTech_Engine.vcxproj  ENHANCEMENTS.md  README_CODEBLOCKS_MINGW.md  README_OPENAL_ADDED.md  SHADERS_README.md  SUPPORTED_FORMATS.md  assistant_vc_help.txt
CoreTech_Engine_With_Projects/cmake/: FetchDependencies.cmake
CoreTech_Engine_With_Projects/demo/: visual_graph.json
CoreTech_Engine_With_Projects/demo_assimp/: demo_scene.json  run_shader_cycle.sh
CoreTech_Engine_With_Projects/include/: DebugUI.h  FrustumCuller.h  GameplayPCGManager.h  HZBOcclusion.h  LauncherImGui.h  Material.h  PCGManager.h  PhysicsComponent.h  PhysicsManager.h  PickupManager.h  RendererDeferred.h  ResourceManager.h  ShaderCache.h  ToonIntegration.h  VisualScripting.h
CoreTech_Engine_With_Projects/shaders/: BlinnPhong.frag.glsl  CelShade.vert.glsl  README_SHADERS.md  Toon.vert.glsl
CoreTech_Engine_With_Projects/src/: BVH.cpp  FileFormatSupport.cpp  GameplayPCGManager.cpp  HZBOcclusion.cpp  JobSystem.cpp  LODManager.cpp  LODRuntime.cpp  LauncherImGui.cpp  LauncherWin32.cpp  MaterialPBR.cpp  MeshLoader.cpp  MeshOptimizer.cpp  RendererGL.cpp  RendererGL.cpp.bak2  ShaderCache.cpp  main.cpp
CoreTech_Engine_With_Projects/tools/: CMakeLists.txt  export_gltf.cpp  lod_generator.cpp
assets/models/: sample_cube.mtl
cmake/: FetchDependencies.cmake  local_toolchain.cmake
demo/: scene_gameplay.cpp  scene_setup.cpp
demo_assimp/: AssimpSkinnedImporter.cpp  CMakeLists.txt  README.md  README_shader_cycle.md  demo_shader_cycle.cpp  demo_toon_integration.cpp
demo_assimp/materials/: border_material.json
include/: AssimpLoader.h  AudioManager.h  BVH.h  EditorInspector.h  Engine.h  FileFormatSupport.h  GPUInstancing.h  LODEditor.h  LODGenerator.h  LODManager.h  LODRuntime.h  Launcher.h  MaterialPBR.h  NavMesh.h  OptimizationPanels.h  PluginAPI.h  Profiler.h  QEMSimplifier.h  Renderer.h  RendererDX11.h  RendererGL.h  TextureStreaming.h
include/Engine/: Engine.h
include/EngineModules/: AudioModule.h  ECSModule.h  InputModule.h  PhysicsModule.h  RendererGL.h  RendererModule.h  RendererVulkan.h
include/Resource/: ResourceManager.h
include/Scene/: Scene.h
include/ecs/: CameraComponent.h  Component.h  Entity.h  MovementSystem.h  RenderSystem.h  RenderableComponent.h  ScriptEngine.h  System.h  TransformComponent.h
shaders/: BlinnPhong.vert.glsl  BlinnPhongNormalMapped.frag.glsl  BlinnPhongNormalMapped.vert.glsl  Borderlands.frag.glsl  CelShade.frag.glsl  MW1_style.frag.glsl  MW2_style.frag.glsl  MW3_style.frag.glsl  Outline.frag.glsl  Toon.frag.glsl
shaders/hlsl/: BlinnPhong.hlsl  CelShade.hlsl  MW2_style.hlsl  MW3_style.hlsl  PBR.hlsl
src/: AssimpLoader.cpp  AudioManager.cpp  AudioManager.h  DebugUI.cpp  DirectXRenderer.cpp  EditorInspector.cpp  FrustumCuller.cpp  GPUInstancing.cpp  HZB.cpp  LODEditor.cpp  LODGenerator.cpp  PhysicsManager.cpp  PickupManager.cpp  RendererDX11.cpp  RendererDeferred.cpp  TextureStreaming.cpp  VisualScriptingNodes.cpp  main.cpp
src/Engine/: Engine.cpp
src/EngineModules/: AudioModule.cpp  ECSModule.cpp  InputModule.cpp  PhysicsModule.cpp  (+2 more)
tests/: expanded_tests.cpp  quick_tests.cpp  test_ecs_renderer.cpp  test_engine_lifecycle.cpp
tools/: ci_build_notes.txt  generate_lods.cpp
tools/enet_lua_sample/: CMakeLists.txt  main.cpp
tools/features/: CMakeLists.txt  README.md
tools/features/demo/: CMakeLists.txt  demo.cpp
tools/features/include/: NetManager.h  ScriptManager.h
tools/features/src/: NetManager.cpp  ScriptManager.cpp
tools/game_app/: CMakeLists.txt
tools/game_app/include/: EditorUI.h  GameApp.h
tools/game_app/src/: GameApp.cpp  imgui_integration.cpp
tools/gameplay/: CMakeLists.txt  sample.scene
tools/gameplay/include/: AIComponent.h  AnimationComponent.h  AnimationPlayer.h  Entity.h  InputManager.h  PhysicsComponent.h  Prefab.h  PrefabManager.h  SceneLoader.h  SceneNode.h  Skeleton.h  SkeletonComponent.h
tools/gameplay/src/: AIComponent.cpp  AnimationPlayer.cpp  CameraController.cpp  LuaBindings.cpp  PhysicsComponent.cpp  Prefab.cpp  PrefabManager.cpp  SceneLoader.cpp  SceneNode.cpp  Skeleton.cpp  gameplay_demo.cpp  lua_bindings.cpp
tools/renderer/: CMakeLists.txt
tools/renderer/include/: AssetManager.h  AssimpLoader.h  DirectionalLight.h  Frustum.h  HDRLoader.h  IBLGenerator.h  LightComponent.h  MaterialComponent.h  PostFX.h  Renderer.h  Shader.h  ShadowMapper.h  Terrain.h
tools/renderer/shaders/: deferred_light_pbr.fs  ibl_brdf.fs  ibl_brdf.vs  ibl_equirect_to_cubemap.fs  ibl_equirect_to_cubemap.vs  ibl_irradiance_convolution.fs  ibl_prefilter.fs  shadow_depth.fs  shadow_depth.vs  skinning.fs  skinning.vs  tonemap.fs  tonemap.vs
tools/renderer/src/: AssetManager.cpp  AssimpLoader.cpp  Frustum.cpp  HDRLoader.cpp  IBLGenerator.cpp  PostFX.cpp  Renderer.cpp  Shader.cpp  ShadowMapper.cpp  Terrain.cpp
(+88 files in other folders)
