cmake_minimum_required(VERSION 3.14)
project(CoreTech_AssimpDemo)
find_package(assimp QUIET)
find_package(glm QUIET)
if(assimp_FOUND AND glm_FOUND)
  add_executable(AssimpSkinnedImporter AssimpSkinnedImporter.cpp)
  target_include_directories(AssimpSkinnedImporter PRIVATE ${GLM_INCLUDE_DIRS})
  target_link_libraries(AssimpSkinnedImporter PRIVATE assimp::assimp)
endif()

add_executable(demo_toon_integration demo_toon_integration.cpp)
if(TARGET ToonIntegration)
  target_link_libraries(demo_toon_integration PRIVATE ToonIntegration)
endif()

add_executable(demo_shader_cycle demo_shader_cycle.cpp)
if(TARGET Renderer)
  target_link_libraries(demo_shader_cycle PRIVATE Renderer)
endif()
